--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   ai-delver-intelligence:
     image: ai-delver-intelligence:dev
@@ -7,13 +9,15 @@ services:
       dockerfile: ai-delver-intelligence/docker/Dockerfile
       target: builder-dev
       args:
-        BASE_IMAGE: ${BASE_IMAGE_VAR}
+        BASE_IMAGE: ${BASE_IMAGE}
         UID: ${UID}
         GID: ${GID}
     ports:
       - "8001:8001"
     working_dir: /app
     user: "${UID}:${GID}"
+    shm_size: ${AI_SHM_SIZE}
+
     volumes:
       - ./ai-delver-intelligence:/app
       - ./pytiling-lib:/pytiling-lib
@@ -23,9 +27,15 @@ services:
       - ./assets:/assets
       - ./ai-delver-intelligence/logs:/app/logs
     environment:
-      - PYTHONPATH=/ai-delver-runtime:/ai-delver-level:/pytiling-lib:/pyglet-dragonbones-lib
+      - PYTHONPATH=/ai-delver-runtime:/ai-delver-runtime/runtime:/ai-delver-level:/pytiling-lib:/pyglet-dragonbones-lib
       - CONTAINER_COMMAND
+      - AI_BATCH_SIZE=${AI_BATCH_SIZE}
       
     command: sh -c "${CONTAINER_COMMAND}"
     stdin_open: true
     tty: true
+
+    deploy:
+      resources:
+        limits:
+          memory: ${AI_MEMORY_LIMIT}
